# libestr

./: .travis.yml  COPYING  ChangeLog  Doxyfile  Makefile.am  autogen.sh  configure.ac  libestr.pc.in
CI/: check_codestyle.sh
include/: libestr.h
src/: Makefile.am  libestr.c  string.c
